--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header p{
 a{
     color: white;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 a:hover{
@@ -57,6 +57,10 @@ section{
     font-size: 3.5vw;
 }
 
+section p{
+    padding-bottom: 2em;
+}
+
 .normal{
     background-color: white;
     color: black;
@@ -65,17 +69,38 @@ section{
 .imagem{
     background-color: rgba(0, 0, 0, 0.24);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.404);
+    background-size: cover;
+    background-attachment: fixed;
+    
 }
 
 .imagem p{
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.295);
+    display: inline-block;
+    font-size: 0.9em;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 0px black;
 }
+
+#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+#img02{
+    background-image: url(imagens/background002.jpg);
+    
+}
+
 
 footer{
     background-color: black;
     color: white;
     padding: 8px;
+    font-size: 0.8em;
+    font-family: var(--font1);
 
 }
 
